# CapybaraGL

./: CMakeLists.txt
.cache/clangd/index/: CapybaraDebug.cpp.EB8DF2CAB9ECFDC4.idx  CapybaraDebug.h.F06931CDEEBF2DC5.idx  IndexBuffer.cpp.BAE320115CD68550.idx  IndexBuffer.h.B72BD4AF5ACCA00E.idx  Renderer.cpp.252AABFDF71BFE5C.idx  Renderer.h.D942A906B70D5E1B.idx  Shader.cpp.32A4AEFC4D1CDF64.idx  Shader.h.21C343D589655AD8.idx  VertexArray.cpp.2B2CBAD4795FDD07.idx  VertexArray.h.22884D9A413BA6C3.idx  VertexBuffer.cpp.0A5DADC606266E12.idx  VertexBuffer.h.CE0FD2FA4E1F576B.idx  Window.cpp.8DC51D5BD110594E.idx  Window.h.2BD9DF619607A1EA.idx
include/: Debug.h  IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h  Window.h
include/CapybaraGL/: Debug.h  IndexBuffer.h  Object.h  Renderer.h  VertexBufferLayout.h  Window.h
internal/: CapybaraDebug.h
res/shaders/: Basic.glsl
src/: CapybaraDebug.cpp  IndexBuffer.cpp  Object.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Window.cpp
tests/: CMakeLists.txt  main.cpp
